added hassio endpoint
